@@ -111,3 +111,39 @@ and s._Assay_key = a._Assay_key
 and a._AssayType_key in (1,2,3,4,5,6,8,9)
 go
 
+print ''
+print 'InSitu Specimens with Age either ''postnatal'', ''postnatal adult'', ''postnatal newborn'' but age range entered'
+print ''
+
+select s.age, a.mgiID, a.jnumID, substring(s.specimenLabel, 1, 50) as specimenLabel
+from GXD_Specimen s, GXD_Assay_View a
+where
+(
+s.age like 'postnatal [0-9]%'
+or
+s.age like 'postnatal adult [0-9]%'
+or
+s.age like 'postnatal newborn [0-9]%'
+)
+and s._Assay_key = a._Assay_key
+and a._AssayType_key in (1,2,3,4,5,6,8,9)
+go
+
+print ''
+print 'Gel Lane Speciments with Age either ''postnatal'', ''postnatal adult'', ''postnatal newborn'' but age range entered'
+print ''
+
+select s.age, a.mgiID, a.jnumID, substring(s.laneLabel, 1, 50) as laneLabel
+from GXD_GelLane s, GXD_Assay_View a
+where
+(
+s.age like 'postnatal [0-9]%'
+or
+s.age like 'postnatal adult [0-9]%'
+or
+s.age like 'postnatal newborn [0-9]%'
+)
+and s._Assay_key = a._Assay_key
+and a._AssayType_key in (1,2,3,4,5,6,8,9)
+go
+
